test/cases/compile_errors/normal_string_with_newline.zig
const foo = "a
b";

// error
// backend=stage2
// target=native
//
// :1:15: error: string literal contains invalid byte: '\n'
